# Weltgeist

./: .gitattributes  .gitignore  ADDENDUMTOLICENSE.txt  CMakeLists.txt  LICENSE  README.md  TODO.txt  TODO.txt~  builddocs.sh  downloaddata.sh  pyproject.toml  setup.py  warpfield_shell_structure.py
Cooling/: CMakeLists.txt  Makefile  compile.sh  cooling_module.cp37-win_amd64.pyd  cooling_module.f90  cooling_module.mod  cooling_module_frig-sharkle.f90  cooling_module_frig.f90  cooling_module_ph.f90
Radiation/: CMakeLists.txt  compile.sh  radiation.f90  raytracing.cp37-win_amd64.pyd  raytracing.f90
StellarSources/: .gitattributes  CMakeLists.txt
StellarSources/Fortran/: singlestar_f2py.f90  singlestar_module.f90  table_1d_module.f90  testtable.f90
StellarSources/Fortran/f2py/: Makefile  singlestar.cp37-win_amd64.pyd  singlestar.pyf  testinstall.py
StellarSources/data/: .gitattributes
VH1/: CMakeLists.txt  vh1-serial  vh1-starter
VH1/src/PPMLR/: evolve.f90  forces.f90  parabola.f90  remap.f90  states.f90
VH1/src/Patch/PPMLR/: evolve.f90  flatten.f90  flatten.f90~  forces.f90  ppmlr.f90  remap.f90  riemann.f90  states.f90  volume.f90
VH1/src/Patch/Spherical/: global.f90  vh1mods.f90
VH1/src/Patch/bin_f2py/: Makefile  Makefile~  log.txt  vhone.pyf
VH1/src/Patch/bin_spherical/: Makefile  Makefile~  vh1-serial
VH1/src/Patch/f2py/: dtcon.f90  dtcon.f90~  global.f90  images.f90  init.f90  init.f90~  prin.f90  sweepx.f90  sweepy.f90  sweepz.f90  vh1mods.f90  vhone.f90  vhone.f90~  zonemod.f90  zonemod.f90~
VH1/src/Serial/: Makefile  Makefile~  dtcon.f90
VH1/src/Starter/: global.mod  sweeps.mod  sweepsize.mod
Weltgeist.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: Doxyfile.conf  index.html
docs/html/: PPMLR_2boundary_8f90.html  PPMLR_2evolve_8f90.html  PPMLR_2flatten_8f90.html  PPMLR_2forces_8f90.html  PPMLR_2parabola_8f90.html  PPMLR_2ppmlr_8f90.html  PPMLR_2remap_8f90.html  PPMLR_2riemann_8f90.html  PPMLR_2states_8f90.html  PPMLR_2vh1mods_8f90.html  PPMLR_2volume_8f90.html  Parallel_2dtcon_8f90.html  Parallel_2dump_8f90.html  Parallel_2images_8f90.html  Parallel_2init_8f90.html  Parallel_2prin_8f90.html  Parallel_2sweepy_8f90.html  Parallel_2sweepz_8f90.html  Parallel_2vhone_8f90.html  Parallel_2zonemod_8f90.html  Patch_2PPMLR_2boundary_8f90.html  Patch_2PPMLR_2evolve_8f90.html  Patch_2PPMLR_2flatten_8f90.html  Patch_2PPMLR_2forces_8f90.html  Patch_2PPMLR_2parabola_8f90.html  Patch_2PPMLR_2ppmlr_8f90.html  Patch_2PPMLR_2remap_8f90.html  Patch_2PPMLR_2riemann_8f90.html  Patch_2PPMLR_2states_8f90.html  Patch_2PPMLR_2vh1mods_8f90.html  Patch_2PPMLR_2volume_8f90.html  Patch_2Spherical_2init_8f90.html  Patch_2Spherical_2vh1mods_8f90.html  Patch_2Spherical_2vhone_8f90.html  Patch_2f2py_2dtcon_8f90.html  Patch_2f2py_2dump_8f90.html  Patch_2f2py_2images_8f90.html  Patch_2f2py_2init_8f90.html  Patch_2f2py_2prin_8f90.html  Patch_2f2py_2sweepx_8f90.html  (+219 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_10.js  files_11.js  files_2.js  files_3.js  (+64 more)
docs/latex/: PPMLR_2boundary_8f90.tex  PPMLR_2evolve_8f90.tex  PPMLR_2flatten_8f90.tex  PPMLR_2forces_8f90.tex  PPMLR_2parabola_8f90.tex  PPMLR_2ppmlr_8f90.tex  PPMLR_2remap_8f90.tex  PPMLR_2riemann_8f90.tex  PPMLR_2states_8f90.tex  PPMLR_2vh1mods_8f90.tex  PPMLR_2volume_8f90.tex  Parallel_2dtcon_8f90.tex  Parallel_2dump_8f90.tex  Parallel_2images_8f90.tex  Parallel_2init_8f90.tex  Parallel_2prin_8f90.tex  Parallel_2sweepy_8f90.tex  Parallel_2sweepz_8f90.tex  Parallel_2vhone_8f90.tex  Parallel_2zonemod_8f90.tex  Patch_2PPMLR_2boundary_8f90.tex  Patch_2PPMLR_2evolve_8f90.tex  Patch_2PPMLR_2flatten_8f90.tex  Patch_2PPMLR_2forces_8f90.tex  Patch_2PPMLR_2parabola_8f90.tex  Patch_2PPMLR_2ppmlr_8f90.tex  Patch_2PPMLR_2remap_8f90.tex  Patch_2PPMLR_2riemann_8f90.tex  Patch_2PPMLR_2states_8f90.tex  Patch_2PPMLR_2vh1mods_8f90.tex  Patch_2PPMLR_2volume_8f90.tex  Patch_2Spherical_2init_8f90.tex  Patch_2Spherical_2vh1mods_8f90.tex  Patch_2Spherical_2vhone_8f90.tex  Patch_2f2py_2dtcon_8f90.tex  Patch_2f2py_2dump_8f90.tex  Patch_2f2py_2images_8f90.tex  Patch_2f2py_2init_8f90.tex  Patch_2f2py_2prin_8f90.tex  Patch_2f2py_2sweepx_8f90.tex  (+144 more)
examples/: example01_hallowelt.py  example02_leonidsedov.py  example03_lettherebelight.py  example04_starmaker.py  example05_saving.py  example06_loading.py  example07_somegravity.py  test.py
src/: cooling.py  cooling_module.cp37-win_amd64.pyd  graphics.py  gravity.py  hydro.py  init.py  init.py~  initTOREMOVE.py  integrator.py  radiation.py  singlestar.pyf  sources.py  test.py  test.py~  units.py  vhone.cp37-win_amd64.pyd  vhone.pyf  windsolutions.py
src/dump/: test.py
tests/: SN_time_M40.txt  test_outflowtracker.py  test_recombination.py  test_starbench.py  test_tablesource.py  tine.py
tests/M40_n1_a0_SN1_R1_W0_l200_n6400/: HII_radius.txt  momentum.txt  outwards_momentum.txt  sn_radius.txt  time.txt
weltgeist/: Tgas.csv  __init__.py  analyticsolutions.py  cooling.py  cooling_module.cp37-win_amd64.pyd  graphics.py  gravity.py  hydro.py  init.py  integrator.py  ionisedtemperatures.py  outflowtracker.py  processtimer.py  radiation.py  singlestar.cp37-win_amd64.pyd  singlestar.pyf  sources.py  test.py  units.py  vhone-sharkle.pyf  vhone.cp37-win_amd64.pyd
weltgeist.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
